Style(ButtonVariant1.tsx): change with of button to avoid overflow

--- a/frontend/src/component/tree/molecule/select/variant1/style.css
+++ b/frontend/src/component/tree/molecule/select/variant1/style.css
@@ -3,6 +3,10 @@
 .select_variant1 label, .select_variant1  fieldset{
 	display:none;
 }
+
+.select_variant1 .css-2m9kme-MuiFormControl-root {
+	width: 100% !important;
+}
 .select_variant1 > div {
 	border-top: var(--border) solid var(--color-neutral-3);
 	border-bottom: var(--border) solid var(--color-neutral-3);
